--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -160,9 +160,11 @@
 }
 
 .talkadvisor {
+	margin-top:30px;
 	color: white;
-	font-size: 50px;
+	font-size: 70px;
 	text-align: center;
+	font-weight:100;
 }
 
 .subtitle {
@@ -181,7 +183,7 @@
 }
 
 .speakers {
-	margin-top: 5px;
+	margin-top: -70px;
 }
 
 .bubble 
@@ -288,4 +290,9 @@ top: 50%;
 	margin:8px;
 	 display:flex;
 	 align-items:center;
+}
+
+.alert-homepage{
+margin-bottom:0px;
+margin-top:-25px;
 }
