--- a/public/css/plugins/star-rating.css
+++ b/public/css/plugins/star-rating.css
@@ -9,157 +9,135 @@
  * For more Yii related demos visit http://demos.krajee.com
  */
 .rating-loading {
-    width: 25px;
-    height: 25px;
-    font-size: 0;
-    color: #fff;
-    background: transparent url('../../images/loading.gif') top left no-repeat;
-    border: none;
+	width: 25px;
+	height: 25px;
+	font-size: 0;
+	color: #fff;
+	background: transparent url('../../images/loading.gif') top left
+		no-repeat;
+	border: none;
+}
+
+.rating-container{
+	display:inline;
 }
 
 /*
  * Stars
  */
- 
 .rating-container .rating {
-    cursor: default;
-    position: relative;
-    vertical-align: middle;
-    display: inline-block;
-    overflow: hidden;
-    white-space: nowrap;
+	cursor: default;
+	position: relative;
+	vertical-align: middle;
+	display: inline-block;
+	overflow: hidden;
+	white-space: nowrap;
 }
 
 .rating-disabled .rating {
-    cursor: not-allowed;
+	cursor: not-allowed;
 }
 
 .rating-container .star {
-    display: inline-block;
-    margin: 0 3px;
-    text-align: center;
+	display: inline-block;
+	margin: 0 3px;
+	text-align: center;
 }
 
 .rating-container .empty-stars {
-    color: #aaa;
+	color: #aaa;
 }
 
 .rating-container .filled-stars {
-    position: absolute;
-    left: 0;
-    top: 0;
-    margin: auto;
-    color: #fde16d;
-    white-space: nowrap;
-    overflow: hidden;
-    -webkit-text-stroke: 1px #777;
-    text-shadow: 1px 1px #999;
+	position: absolute;
+	left: 0;
+	top: 0;
+	margin: auto;
+	color: #fde16d;
+	white-space: nowrap;
+	overflow: hidden;
+	-webkit-text-stroke: 1px #777;
+	text-shadow: 1px 1px #999;
 }
 
 .rating-rtl {
-    float: right;
+	float: right;
 }
 
 .rating-animate .filled-stars {
-    transition: width 0.25s ease;
-    -o-transition: width 0.25s ease;
-    -moz-transition: width 0.25s ease;
-    -webkit-transition: width 0.25s ease;
+	transition: width 0.25s ease;
+	-o-transition: width 0.25s ease;
+	-moz-transition: width 0.25s ease;
+	-webkit-transition: width 0.25s ease;
 }
 
 .rating-rtl .filled-stars {
-    left: auto;
-    right: 0;
-    -moz-transform: matrix(-1, 0, 0, 1, 0, 0) translate3d(0, 0, 0);
-    -webkit-transform: matrix(-1, 0, 0, 1, 0, 0) translate3d(0, 0, 0);
-    -o-transform: matrix(-1, 0, 0, 1, 0, 0) translate3d(0, 0, 0);
-    transform: matrix(-1, 0, 0, 1, 0, 0) translate3d(0, 0, 0);
+	left: auto;
+	right: 0;
+	-moz-transform: matrix(-1, 0, 0, 1, 0, 0) translate3d(0, 0, 0);
+	-webkit-transform: matrix(-1, 0, 0, 1, 0, 0) translate3d(0, 0, 0);
+	-o-transform: matrix(-1, 0, 0, 1, 0, 0) translate3d(0, 0, 0);
+	transform: matrix(-1, 0, 0, 1, 0, 0) translate3d(0, 0, 0);
 }
 
 .rating-rtl.is-star .filled-stars {
-    right: 0.06em;
+	right: 0.06em;
 }
 
 .rating-rtl.is-heart .empty-stars {
-    margin-right: 0.07em;
+	margin-right: 0.07em;
 }
 
-/**
- * Sizes
- */
-.rating-xl {
-    font-size: 4.89em;
-}
-
-.rating-lg {
-    font-size: 3.91em;
-}
-
-.rating-md {
-    font-size: 3.13em;
-}
-
-.rating-sm {
-    font-size: 2.5em;
-}
-
-.rating-xs {
-    font-size: 2em;
-}
-
-.rating-xl {
-    font-size: 4.89em;
-}
 
 /**
  * Clear
  */
 .rating-container .clear-rating {
-    color: #aaa;
-    cursor: not-allowed;
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 60%;
+	color: #aaa;
+	cursor: not-allowed;
+	display: inline-block;
+	vertical-align: middle;
+	font-size: 60%;
 }
 
 .clear-rating-active {
-    cursor: pointer !important;
+	cursor: pointer !important;
 }
 
 .clear-rating-active:hover {
-    color: #843534;
+	color: #843534;
 }
 
 .rating-container .clear-rating {
-    padding-right: 5px;
+	padding-right: 5px;
 }
 
 /**
  * Caption
  */
 .rating-container .caption {
-    color: #999;
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 60%;
-    margin-top: -0.6em;
+	color: #999;
+	display: inline-block;
+	vertical-align: middle;
+	font-size: 60%;
+	margin-top: -0.6em;
 }
 
 .rating-container .caption {
-    margin-left: 5px;
-    margin-right: 0;
+	margin-left: 5px;
+	margin-right: 0;
 }
 
 .rating-rtl .caption {
-    margin-right: 5px;
-    margin-left: 0;
+	margin-right: 5px;
+	margin-left: 0;
 }
 
 /**
  * Print
  */
 @media print {
-    .rating-container .clear-rating {
-        display: none;
-    }
+	.rating-container .clear-rating {
+		display: none;
+	}
 }
