--- a/public/css/plugins/theme-krajee-svg.css
+++ b/public/css/plugins/theme-krajee-svg.css
@@ -18,41 +18,44 @@
 }
 
 .theme-krajee-svg.rating-xl .krajee-icon {
-    width: 80px;
-    height: 80px;
-}
-
-.theme-krajee-svg.rating-lg .krajee-icon {
-    width: 64px;
-    height: 64px;
-}
-
-.theme-krajee-svg.rating-sm .krajee-icon {
-    width: 40px;
-    height: 40px;
-}
-
-.theme-krajee-svg.rating-xs .krajee-icon {
     width: 30px;
     height: 30px;
 }
 
-.theme-krajee-svg.rating-xxs .krajee-icon {
-    width: 17px;
-    height: 17px;
-    margin: -2px;
+@media screen and (max-width:920px) {
+.theme-krajee-svg.rating-xl .krajee-icon  {
+	 width: 20px;
+     height: 20px;
+	 }
 }
 
+.theme-krajee-svg.rating-lg .krajee-icon {
+    width: 25px;
+    height: 25px;
+}
+
+.theme-krajee-svg.rating-sm .krajee-icon {
+    width: 20px;
+    height: 20px;
+}
+
+.theme-krajee-svg.rating-xs .krajee-icon {
+    width: 17px;
+    height: 17px;
+    margin:-2px;
+}
+
+
 .theme-krajee-svg .filled-stars .krajee-icon-star {
-    background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20width%3D%2232%22%20height%3D%2232%22%20viewBox%3D%220%200%2032%2032%22%3E%3Cpath%20fill%3D%22%23fde16d%22%20stroke%3D%22%23777777%22%20d%3D%22M20.6%2011l-4.6-10.5-4.6%2010.5h-10.8l7.8%207.9-3%2012.1%2010.6-6%2010.6%206-3-12.1%207.8-7.9z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
+    background-image: url('../../images/filled-star.png');
 }
 
 .theme-krajee-svg .empty-stars .krajee-icon-star {
-    background-image: url('data:image/svg+xml;charset=utf-8,%3Csvg%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20width%3D%2232%22%20height%3D%2232%22%20viewBox%3D%220%200%2032%2032%22%3E%3Cpath%20fill%3D%22%23ffffff%22%20stroke%3D%22%23777777%22%20d%3D%22M20.6%2011l-4.6-10.5-4.6%2010.5h-10.8l7.8%207.9-3%2012.1%2010.6-6%2010.6%206-3-12.1%207.8-7.9z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E');
+	    background-image: url('../../images/empty-star.png');
 }
 
 .disabled-stars{
-	background-image: url('../../images/disabled-star.svg') !important;
+	background-image: url('../../images/disabled-star.png') !important;
 }
 
 /*
